[gd_scene load_steps=4 format=3 uid="uid://blp03j5r25jn7"]

[ext_resource type="Script" path="res://CutAudHan.gd" id="1_u0rct"]
[ext_resource type="AudioStream" uid="uid://bt42a360wg3hr" path="res://Audio/Cutscene/Cordelia Dialogue.wav" id="2_v8cy7"]
[ext_resource type="AudioStream" uid="uid://c1mth2mufyd0j" path="res://Audio/Cutscene/Mackenzie Dialogue.wav" id="3_7j317"]

[node name="CutAudHan" type="Node"]
script = ExtResource("1_u0rct")

[node name="CordBark" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_v8cy7")

[node name="MackBark" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7j317")

[node name="AmieBark" type="AudioStreamPlayer" parent="."]

[node name="CuriBark" type="AudioStreamPlayer" parent="."]
